# Automation_panel

./: .gitignore  AutomationPanel-windows.spec  README.md  UI_prompt.txt  account_section_manager.py  app.py  automation_section_manager.py  build.bat  main_app.py  playwright_manager.py  pyproject.toml  settings_section.py  start.bat  test_listbox.py  test_notifications.py  test_treebox.py  workflows.json
.github/: build_manual.yml  dependabot.yml
.github/workflows/: build_manual.yml  pylint.yml  ruff.yml  sonar.yml
app/: __init__.py
app/controllers/: __init__.py  account_controller.py  automation_controller.py  browser_controller.py  monitoring_controller.py  settings_controller.py
app/models/: __init__.py  account_model.py
app/models/playwright/: __init__.py  automation_handler.py  base_action.py  batch_processor.py  browser_context.py  browser_manager.py  cache_manager.py  cookie_manager.py  login_handler.py  session_handler.py
app/models/playwright/actions/: __init__.py  base_selectors.py  browser_utils.py  comment_action.py  dialog_utils.py  element_utils.py  like_action.py  share_action.py
app/utils/: __init__.py  config.py  logger.py  notifications.py  randomizer.py  session_sync.py
app/views/: account_view.py  automation_view.py  base_view.py  cache_view.py  monitoring_view.py  settings_view.py
controllers/: __init__.py  account_controller.py  automation_controller.py  browser_controller.py  monitoring_controller.py  settings_controller.py
hooks/: set_lang.py
models/: __init__.py  account_model.py
models/playwright/: browser_manager.py  session_handler.py
sections/: account_models.py  account_section_manager.py  automation_section_manager.py  monitoring_section.py  playwright_manager.py  settings_section.py
utils/: logger.py
views/: __init__.py  account_view.py  automation_view.py  monitoring_view.py  settings_view.py
