[project]
name = "gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "patchright>=1.51.0",
    "playwright-stealth>=1.0.6",
    "psutil>=7.0.0",
    "pylint>=3.3.7",
    "setuptools>=78.1.0",
]

[tool.pylint.main]
fail-under = 8.0

[tool.pylint.messages_control]
disable = ["missing-module-docstring", "too-few-public-methods"]
